Fixes for challenge colors for additional uis

--- a/static-site/pr-2125/pages/challenge-example.html
+++ b/static-site/pr-2125/pages/challenge-example.html
@@ -224,6 +224,44 @@ tr.solved {
    border-color: white;
 }
 
+.dark-mode #llm-challenge-container {
+    background-color: #1f1f1f;
+    border-color: var(--bs-gray-700);
+    color: var(--bs-body-color);
+}
+
+.dark-mode #llm-challenge-container h4,
+.dark-mode #llm-challenge-container p {
+    color: var(--bs-body-color);
+}
+
+.dark-mode #chat-history {
+    background-color: #1a1a1a;
+    border-color: var(--bs-gray-700);
+}
+
+.dark-mode #chat-history .ai-message {
+    background-color: #2a2a2a;
+    color: var(--bs-body-color);
+}
+
+.dark-mode #chat-history .user-message {
+    background-color: #243548;
+    color: var(--bs-body-color);
+}
+
+.dark-mode .chat-input {
+    border-color: var(--bs-gray-700);
+}
+
+.dark-mode .chat-send-btn {
+    background-color: var(--bs-primary);
+}
+
+.dark-mode .chat-tip {
+    color: var(--bs-gray-300);
+}
+
 
 
 /* Bootstrap CSS (minimal) */
